# bookstore_prototype

./: README.md  app.py  dummy.db  hamesh.py  initi.py  load.py  manage.py  pyproject.toml
static/images/: EA9CeKIXYAAJC62.jfif  download (5).jfif  download (6).jfif
static/styles/: style.css
templates/: add.html  error.html  index.html  index2.html  layout.html  login.html  mybooks.html  register.html
