[tool.poetry]
name = "bookstore-poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bookstore_poetry"}]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
Flask-WTF = "^1.0.1"
WTForms = "^3.0.1"
email-validator = "^1.3.0"
Flask-Login = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
